<resources>
    <string name="app_name">ProjectAndroid</string>
    <string name="text">Text</string>
    <string name="newslist">NewsList</string>
    <string name="log_in">Log In</string>
    <string name="news">NEWS</string>
    <string name="news_title">News Title</string>
    <string name="author_name">Author name</string>
    <string name="news_feed">NEWS FEED</string>
    <string name="news_feed_button">News feed</string>
    <string name="enter_email">Enter email</string>
    <string name="register">REGISTER</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="go_to_login">Go to login</string>
    <string name="login">LOGIN</string>
    <string name="go_to_register">Go to register</string>
    <string name="add_a_news">ADD A NEWS</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="add_news_title">Add news title:</string>
    <string name="add_news">Add news</string>
    <string name="enter_the_content">Enter the content</string>
    <string name="add_news_content">Add news content:</string>
    <string name="search_news_by_title">Search news by title</string>
    <string name="go_back_to_feed">Go back to feed</string>
    <string name="share">Share</string>
    <string name="add_news_photo">Add news photo</string>
    <string name="news_photo">News photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>