<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="LabelFor"
    >

    <TextView
        android:id="@+id/addNewsTitle"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/add_a_news"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_width="fill_parent"
        android:layout_margin="60dp"
        />

    <TextView
        android:id="@+id/textTitle"
        android:layout_height="wrap_content"
        android:text="@string/add_news_title"
        android:textColor="#000000"
        android:textSize="22sp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_width="fill_parent"
        />

    <EditText
        android:id="@+id/titleInput"
        android:layout_height="52dp"
        android:autofillHints="News title"
        android:ems="10"
        android:hint="@string/enter_the_title"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        android:textSize="24sp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop = "30dp"
        android:layout_width="fill_parent" />

    <TextView
        android:id="@+id/textContent"
        android:layout_height="wrap_content"
        android:text="@string/add_news_content"
        android:textColor="#000000"
        android:textSize="22sp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop = "30dp"
        android:layout_width="fill_parent" />

    <EditText
        android:id="@+id/contentInput"
        android:layout_height="52dp"
        android:autofillHints="News content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_the_content"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        android:textSize="24sp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop = "30dp"
        android:layout_width="fill_parent" />

    <Button
        android:id="@+id/addNewsButton"
        android:layout_height="wrap_content"
        android:text="@string/add_news"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop = "30dp"
        android:layout_width="fill_parent"
        android:textSize="20sp"
        />

</LinearLayout>