<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="171dp"
        android:text="@string/register"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="162dp"
        android:autofillHints="email@gmail.com"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerTitle" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="149dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="149dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="148dp"
        android:autofillHints="password123"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="198dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="198dp"
        android:text="@string/register"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/goToRegisterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="180dp"
        android:text="@string/go_to_login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>