<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".NewsDetailsActivity">

        <TextView
            android:id="@+id/newsTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/news_title"
            android:textColor="#35214D"
            android:textSize="23sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/productPhoto"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/news_photo"
            tools:srcCompat="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/productDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Button
            android:id="@+id/Share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/share" />

    <RelativeLayout
        android:id="@+id/layoutNavMenu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:menu="@menu/navigation_menu"/>

    </RelativeLayout>


</LinearLayout>
